# substreams-aelf-tokens

./: .gitignore  Cargo.toml  Makefile  README.md  buf.gen.yaml  generator.json  networks.json  package.json  run.sh  schema.graphql  schema.sql  subgraph.yaml  substreams.yaml
proto/sf/substreams/aelf/token/v1/: event.proto  transaction.proto  type.proto
proto/token/: token_contract.proto
sink/: run.sh  substreams.dev.yaml
src/: balance.rs  burn.rs  db_sink.rs  event.rs  graph_sink.rs  lib.rs  maps.rs  sinks.rs  state.rs  token_creation.rs  transaction.rs  transfer.rs  utils.rs
src/pb/: aelf.rs  mod.rs  sf.substreams.aelf.token.v1.rs  sf.substreams.index.v1.rs  sf.substreams.rs  sf.substreams.v1.rs  token.rs
